# rust-platformer

./: Cargo.toml  README.md  imgui.ini
resources/: settings.yaml
resources/tiled/: NES - Super Mario Bros - Tileset.tsx  world_1_1.tmx
src/: application.rs  assets.rs  block.rs  camera.rs  collider.rs  controls.rs  game_scene.rs  game_state.rs  global_state.rs  gradient.rs  imgui_wrapper.rs  input.rs  main.rs  menu_scene.rs  menu_state.rs  player.rs  scene.rs  settings.rs  tilemap.rs
src/old/: application.rs  camera.rs  collider.rs  game_scene.rs  input.rs  main.rs  menu_scene.rs  player.rs  tilemap.rs
